# logstack

./: docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 0c5441b7def9_create_schema.py  6a53757853f1_add_environment_column.py
logstack/: api_models.py  comparison_api.py  constants.py  controllers.py  database.py  database_models.py  file_management_api.py  main.py  settings.py
logstack/api/: analytics.py  ingestion.py  models.py
logstack/static/js/: shared.js
logstack/templates/: all-uploads.html  base.html  compare.html  data-upload.html  diffs-table.html  index.html  prefix-search.html  stats-table.html  stats.html  trends-table.html  trends.html
