[project]
name = "logstack"
version = "0.1.0"
description = "Compare flamechart data and visualize them"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.15.2",
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "numpy>=2.2.6",
    "psycopg2-binary>=2.9.10",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.10",
]
